--- a/src/style/feedback/feedback.css
+++ b/src/style/feedback/feedback.css
@@ -4,6 +4,7 @@
   margin: 0px;
   border: none;
 }
+
 .navigation {
   background-color: black;
   display: flex;
@@ -13,21 +14,41 @@
   padding: 30px 0;
   max-width: 1440px;
 }
+
 .navigation__item {
   color: aqua;
   font-size: 20px;
   text-decoration: none;
 }
+
 .main {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 10px 5px 10px;
-  background-image: url(/img/main.jpg);
+  padding: 10px 5px;
+  background-image: url('/src/img/main.jpg');
   background-size: cover;
-  height: 600px;
+  height: auto;
 }
+
 .main__title {
   text-align: center;
   margin-bottom: 10px;
   color: #18d6a7;
+}
+
+.main__content {
+  padding: 0px 0px 5px 5px;
+  color: white;
+  font-size: 15px;
+}
+
+.feedback-footer {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 10px 5px;
+  display: grid;
+  grid-template-columns: 1fr 0.5fr 1fr;
+  gap: 5px;
+  justify-items: center;
+  background-color: pink;
 }
