--- a/src/style/index/index.less
+++ b/src/style/index/index.less
@@ -1,5 +1,7 @@
+
 @background-header: black;
-@background-main:url(/img/main.jpg);
+@background-main:url(/src/img/main.jpg);
+@background-footer: pink;
 
 .header(){
 	display:flex;
@@ -9,14 +11,27 @@
     padding: 30px 0;
     max-width: 1440px;
 }
+
 .main(){
     max-width: 1440px;
     margin: 0 auto;
     padding: 10px 5px 10px;
     background-image: @background-main;
     background-size: cover;
-    height: 600px;
+    height: auto;
 }
+
+.footer(){
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 10px 5px 10px;
+    display: grid;
+    grid-template-columns:1fr .5fr 1fr;
+    gap: 5px;
+    justify-items: center;
+    background-color: @background-footer;
+}
+
 * {
     box-sizing: border-box;
     padding: 0px;
@@ -34,6 +49,7 @@
     font-size: 20px;
     text-decoration: none;
 }
+
 .main{
     .main;
 }
@@ -42,4 +58,14 @@
     text-align: center;
     margin-bottom: 10px;
     color: #18d6a7 ;
+}
+
+.main__content{
+    padding: 0px 0px 5px 5px;
+    color: white;
+    font-size: 15px;
+}
+
+.index-footer {
+    .footer
 }
