--- a/src/style/feedback/feedback.css
+++ b/src/style/feedback/feedback.css
@@ -50,5 +50,5 @@
   grid-template-columns: 1fr 0.5fr 1fr;
   gap: 5px;
   justify-items: center;
-  background-color: pink;
+  background-color: orange;
 }
