--- a/src/style/index/index.css
+++ b/src/style/index/index.css
@@ -4,7 +4,58 @@
   margin: 0px;
   border: none;
 }
-
+.slider-wrap {
+  position: relative;
+  overflow: hidden;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.slider-arrow {
+  width: 1440px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  background-color: black;
+  opacity: 0.5;
+  color: #18d6a7;
+  font-size: 80px;
+  z-index: 1;
+}
+.slider-arrow__left {
+  position: absolute;
+  font-size: 80px;
+  top: 50%;
+  cursor: pointer;
+  z-index: 1;
+  background-color: greenyellow;
+  opacity: 0.5;
+}
+.slider-arrow__right {
+  position: absolute;
+  font-size: 80px;
+  top: 50%;
+  cursor: pointer;
+  z-index: 1;
+  background-color: greenyellow;
+  opacity: 0.5;
+  right: 0;
+}
+.slider {
+  position: relative;
+  display: flex;
+  transition: transform 0.5s;
+}
+.slider > li {
+  width: 100%;
+  flex: 1;
+  text-align: center;
+}
+.slider > li > img {
+  object-fit: cover;
+  max-width: 1440px;
+  max-height: 800px;
+}
 .navigation {
   background-color: black;
   display: flex;
@@ -14,38 +65,33 @@
   padding: 30px 0;
   max-width: 1440px;
 }
-
 .navigation__item {
   color: aqua;
   font-size: 20px;
   text-decoration: none;
 }
-
 .main {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 10px 5px;
-  background-image: url('/src/img/main.jpg');
+  padding: 10px 5px 10px;
+  background-image: url(/src/img/main.jpg);
   background-size: cover;
   height: auto;
 }
-
 .main__title {
   text-align: center;
   margin-bottom: 10px;
   color: #18d6a7;
 }
-
 .main__content {
   padding: 0px 0px 5px 5px;
   color: white;
   font-size: 15px;
 }
-
 .index-footer {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 10px 5px;
+  padding: 10px 5px 10px;
   display: grid;
   grid-template-columns: 1fr 0.5fr 1fr;
   gap: 5px;
