--- a/src/style/index/index.less
+++ b/src/style/index/index.less
@@ -11,7 +11,11 @@
     padding: 30px 0;
     max-width: 1440px;
 }
-
+.slider(){
+    position: relative;
+    display: flex;
+    transition: transform 0.5s;
+}
 .main(){
     max-width: 1440px;
     margin: 0 auto;
@@ -38,7 +42,50 @@
 	margin: 0px;
 	border: none;
 }
-
+.slider-wrap {
+    position: relative;
+    overflow: hidden;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.slider-arrow{
+    width: 1440px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    background-color: black;
+    opacity: 0.5;
+    color: #18d6a7;
+    font-size: 80px;
+    z-index: 1;
+}
+.slider-arrow__left {
+    position: absolute;
+    font-size: 80px;
+    top: 50%;
+    cursor: pointer;
+    z-index: 1;
+    background-color: greenyellow;
+    opacity: 0.5;
+}
+.slider-arrow__right {
+    .slider-arrow__left;
+    right: 0;
+}
+.slider{
+    .slider;
+}
+.slider > li {
+    width: 100%;
+    flex: 1;
+    text-align: center;
+}
+.slider > li > img{
+    object-fit: cover;
+    max-width: 1440px;
+    max-height: 800px;
+}
 .navigation {
 	background-color: @background-header;
     .header;    
