--- a/src/style/index/index.css
+++ b/src/style/index/index.css
@@ -45,7 +45,7 @@
 }
 
 .arrow {
-  background-color: rgba(233 205 205 15%);
+  background-color: rgba(233, 205, 205, 50%);
   cursor: pointer;
   height: 100%;
   width: 15%;
@@ -53,7 +53,7 @@
 }
 
 .arrow:hover {
-  background-color: rgba(0 0 0 50%);
+  background-color: rgba(0, 0, 0, 50%);
 }
 
 
